feat: :zap: agregando arreglos en las cartas y en el json

--- a/cursos.html
+++ b/cursos.html
@@ -8,8 +8,21 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <h1>Available Courses</h1>
-  <div id="courses-container" class="cards"></div>
+  <div>
+    <div>
+      <h1>Available Courses</h1>
+      <div id="courses-container" class="cards"></div>
+    </div>
+  </div>
+  
+  <div>
+    <div>
+      <h3>shkjfdjaa</h3>
+      <div id="courses-containe" class="cards"></div>
+
+    </div>
+    
+  </div>
 
   
 </body>
