feat: :art: mejoras esteticas

--- a/panel.html
+++ b/panel.html
@@ -10,42 +10,90 @@
     <h1 class="title">Panel</h1>
     <div class="tarjetas">
         <div class="tarje1">
-            <h2>Cursos activos</h2>
+            <h2>Active Courses</h2>
             <h1>3</h1>
         </div>
         <div class="tarje2">
-            <h2>Asignaciones Pendientes</h2>
+            <h2>Pending Assignments</h2>
             <h1>2</h1>
         </div>
         <div class="tarje3">
-            <h2>Progreso General</h2>
+            <h2>Overall Progress</h2>
             <h1>75%</h1>
         </div>
     </div>
     &nbsp;
     <div class="titlebutoom">
         <h1>Mis cursos inscritos</h1>
-        <a href="#"><button>Explorar mas cursos</button></a>
+        <a href="#"><button>Browse More Courses</button></a>
     </div>
     &nbsp;
+    <div class="cursos">
+        <div class="curso1">
+            <img src="img/curso1.jpeg" alt="">
+            <h3>Unity Game Development</h3>
+            <p>Dr. John Smith</p>
+            <hr>
+            <div class="lado">
+                <h3 class="verde">65% complete</h3>
+                <p>13/20 Lessons</p>
+            </div>
+            <div class="buttoncursos"><a href="#"><button>Continue Learning</button></a></div>
+        </div>
+        <div class="curso2">
+            <img src="img/curso2.jpeg" alt="">
+            <h3>Node.js Development</h3>
+            <p>Sarah Johnson</p>
+            <hr>
+            <div class="lado">
+                <h3 class="verde">30% complete</h3>
+                <p>6/20 Lessons</p>
+            </div>
+            <div class="buttoncursos"><a href="#"><button>Continue Learning</button></a></div>
+        </div>
+        <div class="curso3">
+            <img src="img/curso3.jpeg" alt="">
+            <h3>React Mastery</h3>
+            <p>Mike Wilson</p>
+            <hr>
+            <div class="lado">
+                <h3 class="verde">85% complete</h3>
+                <p>17/20 Lessons</p>
+            </div>
+            <div class="buttoncursos"><a href="#"><button>Continue Learning</button></a></div>
+        </div>
+    </div>
+     <p> &nbsp;</p>
     <div class="recientes">
         <h1>Actividad reciente</h1>
         <div class="a1">
-            <img src="" alt="">
-            <h3>Completó el capítulo 5 en Desarrollo de juegos de Unity</h3>
-            <p>hace 2 horas</p>
+            <div class="imgactividad">
+                <img src="img/libros.png" alt="">
+            <div class="ladoactividad">
+            <h3>Completed Chapter 5 in Unity Game Development</h3>
+            <p>2 hours ago</p>
+            </div>
+            </div>
         </div>
         &nbsp;
         <div class="a2">
-            <img src="" alt="">
-            <h3>Trabajo entregado: Proyecto de plataforma de comercio electrónico</h3>
-            <p>hace 1 día</p>
+            <div class="imgactividad">
+                <img src="img/mano.png" alt="">
+            <div class="ladoactividad">
+            <h3>Submitted assignment: E-commerce Platform Project</h3>
+            <p>1 day ago</p>
+            </div>
+            </div>
         </div>
         &nbsp;
         <div class="a3">
-            <img src="" alt="">
-            <h3>Obtuve el certificado en Fundamentos de React</h3>
-            <p>Hace 3 días</p>
+           <div class="imgactividad">
+                <img src="img/trofeos.png" alt="">
+            <div class="ladoactividad">
+            <h3>Earned certificate in React Fundamentals</h3>
+            <p>3 days ago</p>
+            </div>
+            </div>
         </div>
     </div>
 </body>
