--- a/panel.html
+++ b/panel.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="css/panel.css">
 </head>
 <body>
-    <h1 class="title">Panel</h1>
+    <h1 class="title"> &nbsp; &nbsp; &nbsp;Dashboard</h1>
     <div class="tarjetas">
         <div class="tarje1">
-            <h2>Active Courses</h2>
-            <h1>3</h1>
+            <h2>Active Courses&nbsp;</h2>
+            <h1>3&nbsp;</h1>
         </div>
         <div class="tarje2">
-            <h2>Pending Assignments</h2>
+            <h2>Pending <br> Assignment</h2>
             <h1>2</h1>
         </div>
         <div class="tarje3">
@@ -24,7 +24,7 @@
     </div>
     &nbsp;
     <div class="titlebutoom">
-        <h1>Mis cursos inscritos</h1>
+        <h1 class="title">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My Enrolled Courses</h1>
         <a href="#"><button>Browse More Courses</button></a>
     </div>
     &nbsp;
@@ -65,7 +65,7 @@
     </div>
      <p> &nbsp;</p>
     <div class="recientes">
-        <h1>Actividad reciente</h1>
+        <h1>Recent Activity</h1>
         <div class="a1">
             <div class="imgactividad">
                 <img src="img/libros.png" alt="">
