feat: :sparkles: primera parte de procesos

--- a/proceso.html
+++ b/proceso.html
@@ -7,5 +7,31 @@
 </head>
 <body>
   <h1>Learning Progress</h1>
+  <div class="tarjetas">
+    <div class="proce1">
+      <h2>Web <br> Development</h2>
+      <progress id="barraprogreso" value="80" max="100"></progress>
+      <p>80% complete</p>
+      <p class="azul">Click to view topics</p>
+    </div>
+    <div class="proce2">
+      <h2>Data Science</h2>
+      <progress id="barraprogreso" value="60" max="100"></progress>
+      <p>60% Complete</p>
+      <p class="azul">Click to view topics</p>
+    </div>
+    <div class="proce3">
+      <h2>Mobile  <br>Development</h2>
+      <progress id="barraprogreso" value="45" max="100"></progress>
+      <p>45% Complete</p>
+      <p class="azul">Click to view topics</p>
+    </div>
+    <div class="proce4">
+      <h2>Cloud <br>Computing</h2>
+      <progress id="barraprogreso" value="30" max="100"></progress>
+      <p>30% Complete</p>
+      <p class="azul">Click to view topics</p>
+    </div>
+  </div>
 </body>
 </html>
