feat: :zap: avances ventanas emergentes

--- a/panel.html
+++ b/panel.html
@@ -30,7 +30,7 @@
     &nbsp;
     <div class="cursos">
         <div class="curso1">
-            <img src="img/curso1.jpeg" alt="">
+            <img src="img/img-tarjeta.jpeg" alt="">
             <h3>Unity Game Development</h3>
             <p>Dr. John Smith</p>
             <hr>
@@ -38,10 +38,10 @@
                 <h3 class="verde">65% complete</h3>
                 <p>13/20 Lessons</p>
             </div>
-            <div class="buttoncursos"><a href="#"><button>Continue Learning</button></a></div>
+            <div class="buttoncursos"><a href="cursos.html"><button>Continue Learning</button></a></div>
         </div>
         <div class="curso2">
-            <img src="img/curso2.jpeg" alt="">
+            <img src="img/node-js.jpeg" alt="">
             <h3>Node.js Development</h3>
             <p>Sarah Johnson</p>
             <hr>
@@ -49,10 +49,10 @@
                 <h3 class="verde">30% complete</h3>
                 <p>6/20 Lessons</p>
             </div>
-            <div class="buttoncursos"><a href="#"><button>Continue Learning</button></a></div>
+            <div class="buttoncursos"><a href="cursos.html"><button>Continue Learning</button></a></div>
         </div>
         <div class="curso3">
-            <img src="img/curso3.jpeg" alt="">
+            <img src="img/React.jpeg" alt="">
             <h3>React Mastery</h3>
             <p>Mike Wilson</p>
             <hr>
@@ -60,7 +60,7 @@
                 <h3 class="verde">85% complete</h3>
                 <p>17/20 Lessons</p>
             </div>
-            <div class="buttoncursos"><a href="#"><button>Continue Learning</button></a></div>
+            <div class="buttoncursos"><a href="cursos.html"><button>Continue Learning</button></a></div>
         </div>
     </div>
      <p> &nbsp;</p>
