fix: :bug: correcion de errores

--- a/Course-Topics.html
+++ b/Course-Topics.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <a href="course.html" class="back-button">← Back to Courses</a>
   <div class="container">
     <aside class="sidebar">
       <h2>Course Topics <span id="progress">0/4 completed</span></h2>
