--- a/navegador.html
+++ b/navegador.html
@@ -24,7 +24,7 @@
                 <div class="nav-link" onclick="loadPage('assignments.html')">Assignments</div>
             </li>
             <li class="nav-item">
-                <div class="nav-link" onclick="loadPage('progress.html')">Progress</div>
+                <div class="nav-link" onclick="loadPage('proceso.html')">Progress</div>
             </li>
             <li class="nav-item">
                 <div class="nav-link" onclick="loadPage('profile.html')">Profile</div>
