--- a/proceso.html
+++ b/proceso.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Procesos</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/proceso.css">
   <script type="module" src="js/proceso.js"></script>
 </head>
@@ -11,42 +12,42 @@
   <div class="tarjetas">
     <div class="proce1">
       <h2>Web <br> Development</h2>
-      <progress id="barraprogreso" value="80" max="100"></progress>
+      <progress class="barraprogreso" value="80" max="100"></progress>
       <p>80% complete</p>
       <p class="azul">Click to view topics</p>
     </div>
     <div class="proce2">
       <h2>Data Science</h2>
-      <progress id="barraprogreso" value="60" max="100"></progress>
+      <progress class="barraprogreso" value="60" max="100"></progress>
       <p>60% Complete</p>
       <p class="azul">Click to view topics</p>
     </div>
     <div class="proce3">
       <h2>Mobile  <br>Development</h2>
-      <progress id="barraprogreso" value="45" max="100"></progress>
+      <progress class="barraprogreso" value="45" max="100"></progress>
       <p>45% Complete</p>
       <p class="azul">Click to view topics</p>
     </div>
     <div class="proce4">
       <h2>Cloud <br>Computing</h2>
-      <progress id="barraprogreso" value="30" max="100"></progress>
+      <progress class="barraprogreso" value="30" max="100"></progress>
       <p>30% Complete</p>
       <p class="azul">Click to view topics</p>
     </div>
   </div>
   <div id="popup-card" class="popup-card" style="display: none;">
-  <div class="popup-header">
-    <h2 id="popup-title"></h2>
-    <span id="popup-close" class="popup-close">&times;</span>
-  </div>
-  <div class="popup-progress-container">
-    <div id="popup-image" class="popup-image"></div>
-    <div class="popup-total-progress">
-      <div id="popup-progress-bar" class="progress-bar"></div>
-      <span id="popup-progress-text"></span>
+    <div class="popup-header">
+      <h2 id="popup-title"></h2>
+      <span id="popup-close" class="popup-close">&times;</span>
     </div>
+    <div class="popup-progress-container">
+      <div id="popup-image" class="popup-image"></div>
+      <div class="popup-total-progress">
+        <div id="popup-progress-bar" class="progress-bar"></div>
+        <span id="popup-progress-text"></span>
+      </div>
+    </div>
+    <div id="popup-content" class="popup-content"></div>
   </div>
-  <div id="popup-content" class="popup-content"></div>
-</div>
 </body>
 </html>
