--- a/navegador.html
+++ b/navegador.html
@@ -27,7 +27,7 @@
                 <div class="nav-link" onclick="loadPage('proceso.html')">Progress</div>
             </li>
             <li class="nav-item">
-                <div class="nav-link" onclick="loadPage('profile.html')">Profile</div>
+                <div class="nav-link" onclick="loadPage('perfil.html')">Profile</div>
             </li>
         </ul>
 
