feat: :fire: Arreglos en el perfil y en la barra de navegacion

--- a/navegador.html
+++ b/navegador.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LMS PORTAL</title>
     <link rel="stylesheet" href="css/panel.css">
 </head>
 <body>
         
     <nav class="navbar" id="navbar">
         <a href="#" class="navbar-brand">
-            LMS
+            <span class="portal">LMS</span>
             <span class="portal">Portal</span>
         </a>
         <ul class="navbar-nav" id="navbarNav">
@@ -38,8 +38,8 @@
 
             <div class="language-select-container">
                 <select class="language-select" id="languageSelect">
-                    <option value="en">English</option>
                     <option value="es">Español</option>
+                    <option value="en">English</option>
                     <option value="fr">Français</option>
                     <option value="de">Deutsch</option>
                 </select>
