--- a/perfil.html
+++ b/perfil.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="header">
-    <img class="avatar" src="Captura desde 2025-05-26 21-59-14.png" alt="Profile" />
+    <img class="avatar" src="img/perfil.jpeg" alt="Profile" />
     <h2>John Doe</h2>
     <p>Computer Science Student</p>
   </div>
