feat: :zap: Arreglos finales

--- a/cursos.html
+++ b/cursos.html
@@ -11,6 +11,10 @@
   <div class="container">
     <h2>Available Courses</h2>
     <div id="categories-container"></div>
+    <div class="container">
+      <h2>Cursos Agregados</h2>
+    <div id="cursos-dinamicos" class="card-grid"></div>
+</div>
   </div>
 </body>
 </html>
