--- a/navegador.html
+++ b/navegador.html
@@ -29,6 +29,9 @@
             <li class="nav-item">
                 <div class="nav-link" onclick="loadPage('perfil.html')">Profile</div>
             </li>
+            <li class="nav-item">
+                <div class="nav-link" onclick="loadPage('admin.html')">Admin</div>
+            </li>
         </ul>
 
         <div class="navbar-right">
