--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <iframe id="contentFrame" src="panel.html" frameborder="0" style="width: 100%; height: 80vh;"></iframe>
     </div>
 
-    <script src="js/navegador.js"></script>
+    <script src="js/index.js"></script>
     <script>
         // Función para cargar las páginas dentro del iframe
         function loadPage(page) {
